fix: fix duplicate id our friends

--- a/shelter/pages/pets/styles.css
+++ b/shelter/pages/pets/styles.css
@@ -242,7 +242,7 @@ nav li a:active {
     border: 2px solid var(--color-primary-dark);
 }
 
-.button_navigation:disabled h4 {
+.button_navigation:disabled {
     color: var(--color-primary-dark);
 }
 
