--- a/shelter/pages/main/styles.css
+++ b/shelter/pages/main/styles.css
@@ -3,6 +3,9 @@
 * {
     margin: 0;
     padding: 0;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 0.06em;
 }
 
 html {
@@ -21,6 +24,18 @@ html {
     --color-light: #f6f6f6;
     --color-light-second: #fafafa;
 }
+
+@font-face {
+    font-family: "Georgia";   
+    src: local("Georgia"),
+        url("../../assets/fonts/georgia/georgia-regular.ttf") format("ttf");
+  }
+
+@font-face {
+    font-family: "Arial";
+    src: url("../../assets/fonts/arial/arial-regular.ttf") format("ttf");
+}
+
 
 h1 {
     font-family: Georgia;
@@ -66,15 +81,6 @@ h5 {
     max-width: 1280px;
 }
 
-@font-face {
-    font-family: "Georgia";
-    src: url("../../assets/fonts/georgia/georgia-regular.ttf") format("ttf");
-  }
-
-@font-face {
-    font-family: "Arial";
-    src: url("../../assets/fonts/arial/arial-regular.ttf") format("ttf");
-}
 
 
   a {
