--- a/shelter/pages/main/styles.css
+++ b/shelter/pages/main/styles.css
@@ -5,7 +5,7 @@
     padding: 0;
     font-weight: 400;
     font-style: normal;
-    letter-spacing: 0.06em;
+    
 }
 
 html {
@@ -28,7 +28,7 @@ html {
 @font-face {
     font-family: "Georgia";   
     src: local("Georgia"),
-        url("../../assets/fonts/georgia/georgia-regular.ttf") format("ttf");
+        url("../../assets/fonts/georgia/georgia.woff") format("woff");
   }
 
 @font-face {
@@ -478,7 +478,7 @@ footer {
 .footer_section {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     grid-gap: 32px;
     margin-top: 16px;
     margin-bottom: 60px;
