--- a/shelter/pages/pets/styles.css
+++ b/shelter/pages/pets/styles.css
@@ -68,7 +68,8 @@ h5 {
 
 @font-face {
     font-family: "Georgia";
-    src: url("../../assets/fonts/georgia/georgia-regular.ttf") format("ttf");
+    src: local("Georgia"),
+        url("../../assets/fonts/georgia/georgia.woff") format("woff");
   }
 
 /* Header */
@@ -225,7 +226,7 @@ nav li a:active {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    grid-gap:20px;
+    grid-gap: 20px;
 }
 
 .button_navigation {
