--- a/shelter/pages/main/styles.css
+++ b/shelter/pages/main/styles.css
@@ -56,6 +56,7 @@ h3 {
     color: var(--color-dark-second);
     font-size: 35px;
     line-height: 130%;
+    letter-spacing: 0.1em;
 }
 
 h4 {
@@ -63,6 +64,7 @@ h4 {
     font-size: 20px;
     line-height: 115%;
     color: var(--color-dark-second);
+    letter-spacing: 0.01em;
 }
 h4 a {
     color: var(--color-dark-second);
@@ -117,7 +119,7 @@ header {
 #logo_phrase {
     font-family: Arial;
     font-size: 13px;
-    letter-spacing: 0.06em;
+    letter-spacing: 0.1em;
     color: var(--color-second);
     padding-left: 4px;
 }
@@ -193,6 +195,7 @@ nav li a:active {
     color: var(--color-dark);
     font-family: Georgia;
     font-size: 17px;
+    letter-spacing: 0.1em;
     text-decoration: none;
     border: none;
     align-content: center;
@@ -262,7 +265,7 @@ nav li a:active {
 #pets_content {
     display: flex;
     height: 697px;
-    margin: 80px 40px 100px 40px;
+    margin: 85px 40px 95px 40px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -317,6 +320,7 @@ nav li a:active {
 .card p {
     font-family: Georgia;
     font-size: 20px;
+    letter-spacing: 0.1em;
     text-align: center;
     color: var(--color-dark-second);
 }
@@ -336,6 +340,7 @@ nav li a:active {
     justify-content: center;
     font-family: Georgia;
     font-size: 17px;
+    letter-spacing: 0.1em;
     text-align: center;
     color: var(--color-dark);
     background: var(--color-light-second);
@@ -356,6 +361,7 @@ nav li a:active {
     color: var(--color-dark);
     font-family: Georgia;
     font-size: 17px;
+    letter-spacing: 0.1em;
 }
 
 #button_pets a:hover {
@@ -470,7 +476,6 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
     grid-gap: 160px;
     margin: 40px 40px 0 40px;
 }
@@ -478,7 +483,7 @@ footer {
 .footer_section {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     grid-gap: 32px;
     margin-top: 16px;
     margin-bottom: 60px;
