--- a/shelter/pages/pets/styles.css
+++ b/shelter/pages/pets/styles.css
@@ -278,7 +278,7 @@ footer {
 .footer_section {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     grid-gap: 32px;
     margin-top: 16px;
     margin-bottom: 60px;
