--- a/shelter/pages/main/styles.css
+++ b/shelter/pages/main/styles.css
@@ -81,6 +81,7 @@ h5 {
     display: flex;
     flex-direction: column;
     max-width: 1280px;
+    margin: 0 auto;
 }
 
 
@@ -476,7 +477,7 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    grid-gap: 158px;
+    grid-gap: 140px;
     margin: 38px 40px 0 40px;
 }
 
@@ -485,7 +486,7 @@ footer {
     flex-direction: column;
     justify-content: space-around;
     grid-gap: 32px;
-    margin-top: 16px;
+    margin-top: 14px;
     margin-bottom: 60px;
 }
 
