--- a/shelter/pages/main/styles.css
+++ b/shelter/pages/main/styles.css
@@ -64,7 +64,7 @@ h4 {
     font-size: 20px;
     line-height: 115%;
     color: var(--color-dark-second);
-    letter-spacing: 0.06em;;
+    letter-spacing: 0.06em;
 }
 h4 a {
     color: var(--color-dark-second);
@@ -75,6 +75,7 @@ h5 {
     font-size: 15px;
     line-height: 110%;
     color: var(--color-dark-second);
+    letter-spacing: 0.06em;
 }
 
 .container {
@@ -381,7 +382,7 @@ nav li a:active {
 }
 
 #help h4 {
-    letter-spacing: 0.01em;
+    letter-spacing: 0.06em;
 }
 
 #help_content {
@@ -398,7 +399,7 @@ nav li a:active {
 }
 
 #help_list {
-    margin: 60px 87px 0 87px;
+    margin: 60px 80px 0 80px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -410,6 +411,7 @@ nav li a:active {
 .help_card {
     height: 113px;
     display: flex;
+    gap: 30px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -418,7 +420,6 @@ nav li a:active {
 .help_image {
     width: 60px;
     height: 60px;
-    margin: 0 11px 30px 11px;
 }
 
 /* Donation */
@@ -435,11 +436,11 @@ nav li a:active {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap:20px;
+    gap:30px;
 }
 
 #donation_image {
-    margin: 10px;
+    margin: 10px 0;
 
 }
 
@@ -448,7 +449,7 @@ nav li a:active {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    gap: 20px;
+    gap: 18px;
 }
 
 #card {
@@ -463,7 +464,7 @@ nav li a:active {
 }
 
 #donation_info p {
-    font-family: Arial, sans-serif;
+    font-family: Arial;
     font-style: italic;
     font-size: 12px;
     line-height: 150%;
