--- a/shelter/pages/pets/styles.css
+++ b/shelter/pages/pets/styles.css
@@ -46,6 +46,7 @@ h3 {
     color: var(--color-dark-second);
     font-size: 35px;
     line-height: 130%;
+    letter-spacing: 0.1em;
 }
 
 h4 {
@@ -53,12 +54,7 @@ h4 {
     font-size: 20px;
     line-height: 115%;
     color: var(--color-dark-second);
-}h3 {
-    font-family: Georgia;
-    color: var(--color-dark-second);
-    font-size: 35px;
-    line-height: 130%;
-    letter-spacing: 0.1em;
+    letter-spacing: 0.06em;
 }
 
 h4 {
@@ -290,29 +286,36 @@ footer {
 #footer_content {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    grid-gap: 160px;
+    gap: 160px;
     margin: 40px 40px 0 40px;
+}
+
+#footer_info {
+    display: flex;
+    flex-direction: row;
+    gap: 140px;
 }
 
 .footer_section {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    grid-gap: 32px;
-    margin-top: 16px;
+    gap: 32px;
+    margin-top: 14px;
     margin-bottom: 60px;
+    max-width: 300px;
 }
 
 .footer_row {
     display: flex;
     flex-direction: row;
-    grid-gap: 20px;
+    gap: 20px;
     align-items: center;
 }
 
 footer h3 {
     color: var(--color-second);
+    font-weight: 400;
     font-size: 35px;
     line-height: 130%;
     letter-spacing: 0.06em;
