--- a/shelter/pages/pets/styles.css
+++ b/shelter/pages/pets/styles.css
@@ -46,7 +46,7 @@ h3 {
     color: var(--color-dark-second);
     font-size: 35px;
     line-height: 130%;
-    letter-spacing: 0.1em;
+    letter-spacing: 0.06em;
 }
 
 h4 {
@@ -57,19 +57,12 @@ h4 {
     letter-spacing: 0.06em;
 }
 
-h4 {
-    font-family: Georgia;
-    font-size: 20px;
-    line-height: 115%;
-    color: var(--color-dark-second);
-    letter-spacing: 0.01em;
-}
-
 h5 {
     font-family: Georgia;
     font-size: 15px;
     line-height: 110%;
     color: var(--color-dark-second);
+    letter-spacing: 0.06em;
 }
 
 .container {
@@ -123,6 +116,7 @@ nav li {
     font-size: 15px;
     line-height: 160%;
     color: var(--color-dark-second);
+    letter-spacing: 0px;
 }
 
 
