--- a/shelter/pages/pets/styles.css
+++ b/shelter/pages/pets/styles.css
@@ -78,6 +78,11 @@ h5 {
         url("../../assets/fonts/georgia/georgia.woff") format("woff");
   }
 
+@font-face {
+    font-family: "Arial";
+    src: url("../../assets/fonts/arial/arial-regular.ttf") format("ttf");
+}
+
 /* Header */
 
 header {
@@ -112,8 +117,6 @@ nav ul {
 
 nav li {
     list-style: none;
-    font-family: Arial;
-    font-size: 15px;
     line-height: 160%;
     color: var(--color-dark-second);
     letter-spacing: 0px;
