--- a/shelter/pages/pets/styles.css
+++ b/shelter/pages/pets/styles.css
@@ -117,6 +117,7 @@ nav ul {
 
 nav li {
     list-style: none;
+    font-size: 15px;
     line-height: 160%;
     color: var(--color-dark-second);
     letter-spacing: 0px;
