--- a/shelter/pages/pets/styles.css
+++ b/shelter/pages/pets/styles.css
@@ -4,7 +4,6 @@
     margin: 0;
     padding: 0;
     font-weight: 400;
-    letter-spacing: 0.06em;
 }
 
 html {
@@ -117,6 +116,7 @@ nav ul {
 
 nav li {
     list-style: none;
+    font-family: Arial;
     font-size: 15px;
     line-height: 160%;
     color: var(--color-dark-second);
